implement search hiphive **submit button bug

--- a/.gitignore
+++ b/.gitignore
@@ -88,85 +88,5 @@ ENV/
 # Rope project settings
 .ropeproject
 .idea/inspectionProfiles/Project_Default.xml
-output/test1.vcf
-output/test2.vcf
-output/test3.vcf
-output/test4.vcf
-output/test5.vcf
-output/test6.vcf
-tools/exomiser-cli-7.2.1/LICENSE.txt
-tools/exomiser-cli-7.2.1/NA19722_252900_AR_SGSH_1_NONSYNONYMOUS.yml
-tools/exomiser-cli-7.2.1/NA19722_601952_AUTOSOMAL_RECESSIVE_POMP_13_29233225_5UTR_38.yml
-tools/exomiser-cli-7.2.1/README.md
-tools/exomiser-cli-7.2.1/application.properties
-tools/exomiser-cli-7.2.1/data/InDels.tsv.gz
-tools/exomiser-cli-7.2.1/data/InDels.tsv.gz.tbi
-tools/exomiser-cli-7.2.1/data/NA19722_252900_AR_SGSH_1_NONSYNONYMOUS.vcf
-tools/exomiser-cli-7.2.1/data/NA19722_601952_AUTOSOMAL_RECESSIVE_POMP_13_29233225_5UTR_38.vcf.gz
-tools/exomiser-cli-7.2.1/data/Pfeiffer-quartet.ped
-tools/exomiser-cli-7.2.1/data/Pfeiffer-quartet.vcf
-tools/exomiser-cli-7.2.1/data/Pfeiffer.vcf
-tools/exomiser-cli-7.2.1/data/exomiser.h2.db
-tools/exomiser-cli-7.2.1/data/phenix/1.out
-tools/exomiser-cli-7.2.1/data/phenix/10.out
-tools/exomiser-cli-7.2.1/data/phenix/10_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/11.out
-tools/exomiser-cli-7.2.1/data/phenix/11_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/12.out
-tools/exomiser-cli-7.2.1/data/phenix/12_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/13.out
-tools/exomiser-cli-7.2.1/data/phenix/13_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/14.out
-tools/exomiser-cli-7.2.1/data/phenix/14_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/15.out
-tools/exomiser-cli-7.2.1/data/phenix/15_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/16.out
-tools/exomiser-cli-7.2.1/data/phenix/16_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/17.out
-tools/exomiser-cli-7.2.1/data/phenix/17_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/18.out
-tools/exomiser-cli-7.2.1/data/phenix/18_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/19.out
-tools/exomiser-cli-7.2.1/data/phenix/19_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/1_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/2.out
-tools/exomiser-cli-7.2.1/data/phenix/20.out
-tools/exomiser-cli-7.2.1/data/phenix/20_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/2_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/3.out
-tools/exomiser-cli-7.2.1/data/phenix/3_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/4.out
-tools/exomiser-cli-7.2.1/data/phenix/4_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/5.out
-tools/exomiser-cli-7.2.1/data/phenix/5_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/6.out
-tools/exomiser-cli-7.2.1/data/phenix/6_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/7.out
-tools/exomiser-cli-7.2.1/data/phenix/7_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/8.out
-tools/exomiser-cli-7.2.1/data/phenix/8_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/9.out
-tools/exomiser-cli-7.2.1/data/phenix/9_symmetric.out
-tools/exomiser-cli-7.2.1/data/phenix/ALL_SOURCES_ALL_FREQUENCIES_genes_to_phenotype.txt
-tools/exomiser-cli-7.2.1/data/phenix/hp.obo
-tools/exomiser-cli-7.2.1/data/phenix/phenotype_annotation.tab
-tools/exomiser-cli-7.2.1/data/remmData.tsv.gz
-tools/exomiser-cli-7.2.1/data/remmData.tsv.gz.tbi
-tools/exomiser-cli-7.2.1/data/rw_string_9_05.gz
-tools/exomiser-cli-7.2.1/data/rw_string_9_05_id2index.gz
-tools/exomiser-cli-7.2.1/data/ucsc_hg19.ser
-tools/exomiser-cli-7.2.1/data/whole_genome_SNVs.tsv.gz
-tools/exomiser-cli-7.2.1/data/whole_genome_SNVs.tsv.gz.tbi
-tools/exomiser-cli-7.2.1/ehcache.xml
-tools/exomiser-cli-7.2.1/exomiser-cli-7.2.1.jar
-tools/exomiser-cli-7.2.1/template.settings
-tools/exomiser-cli-7.2.1/test-analysis-batch.txt
-tools/exomiser-cli-7.2.1/test-analysis-exome.yml
-tools/exomiser-cli-7.2.1/test-analysis-genome.yml
-tools/exomiser-cli-7.2.1/test-batchFiles.txt
-tools/exomiser-cli-7.2.1/test-hiphive.settings
-tools/exomiser-cli-7.2.1/test-multisample.settings
-tools/exomiser-cli-7.2.1/test-phenix.settings
-tools/exomiser-cli-7.2.1/test-phive.settings
-tools/exomiser-cli-7.2.1/test-walker.settings
-tools/exomiser-cli-7.2.1/test.settings
+output/*
+tools/exomiser-cli-7.2.1/*
