add ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ ENV/
 .idea/inspectionProfiles/Project_Default.xml
 output/*
 tools/exomiser-cli-7.2.1/*
+database/ExAC.r0.3.1.sites.vep.csv
+database/ExAC.r0.3.1.sites.vep.vcf
+database/variant.153.csv
+database/variant.153.vcf
