edit filter output

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ database/ExAC.r0.3.1.sites.vep.csv
 database/ExAC.r0.3.1.sites.vep.vcf
 database/variant.153.csv
 database/variant.153.vcf
+database/Revel_all_chromosomes.csv
