--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ tools/exomiser-cli-7.2.1/data
 database/ExAC.r0.3.1.sites.vep.vcf
 database/variant.153.vcf
 database/Revel_all_chromosomes.csv
+db.sqlite3
